create reservation fonctionnel